--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,9 +29,9 @@ body {
   padding: 14px 28px;
   background: linear-gradient(
     270deg,
-    #ffffff,
+    #cbc4f8,
     #eaf2ff,
-    #ffffff
+    #cbc4f8
   );
   background-size: 500% 500%;
   animation: headerPulse 8s ease-in-out infinite;
